# crypto_insights

./: .gitignore
aavev2-ethereum-merge-analysis/: README.md
aavev2-ethereum-merge-analysis/code/: README.md  aave_v2_analysis_plots.ipynb  get_lending_data.py  plot.py  plot_returns.py
aavev2-ethereum-merge-analysis/code/abis/: atokenv3.abi
binance_bridge/: README.md
binance_bridge/code/: README.md  bnb_supplies.py  get_binance_addresses.py  get_binance_reserves.py  plot_supplies.py
binance_bridge/data/: binance_addresses.csv  busd_balances.csv  usdc_balances.csv
ethena/: README.md  ethena_returns.py  ethena_staking.py  plot_ethena.py
ethena/abis/: susde.abi
ethena/code/: ethena_returns.py  ethena_staking.py  plot_ethena.py
ethena/data/: ethena_returns.csv  ethena_roles.csv  ethena_roles_parsed.csv  ethena_staking.csv
polygon-usdc/: README.md
polygon-usdc/code/: README.md  get_polymarket_balances.py  get_supply.py  plot_supply.py  plot_usdce_holdings.py  pyproject.toml  requirements.txt
polygon-usdc/data/: polygon_usdc.csv
pyusd/: README.md
pyusd/code/: README.md  descriptive_stats.py  plot_pyusd_analysis.py  pyproject.toml  scrape_pyusd.py
pyusd/code/abis/: cached_abis.json  pyusd.abi
pyusd/data/: pyusd_admin_logs.csv
stablecoin_prices/: README.md  plot_stables.py  scrape_prices.py
stablecoin_prices/data/: DAI.csv  USDC.csv  USDS.csv  USDT.csv  USDe.csv
usdc-usdt/: README.md
usdc-usdt/code/: coingecko_scraper.py  get_charts.py  requirements.txt  usdc-usdt-market-caps.py
usdc-usdt/data/: usdc_history.csv  usdt_history.csv
(+6 files in other folders)
