[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "web3>=7.14.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
]
